<resources>
    <string name="app_name">Let\'s drink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="non_alcoholic">Non Alcoholic</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="thumbnail">thumbnail</string>
    <string name="categories">Categories</string>
    <string name="favourite">Favourite</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="alcohol">Alcohol:</string>
    <string name="glass">Glass:</string>
    <string name="iba">IBA:</string>
    <string name="choose_a_drink_for_today">Choose a drink for today?</string>
</resources>